@@ -14,6 +14,8 @@
   <attr path="/api/namespace/object[@cname='GInputStream']/method[@name='CloseAsync']/*/*[@type='GAsyncReadyCallback']" name="scope">async</attr>
   <attr path="/api/namespace/object[@cname='GInputStream']/method[@name='ReadAsync']/*/*[@type='GAsyncReadyCallback']" name="scope">async</attr>
   <attr path="/api/namespace/object[@cname='GInputStream']/method[@name='SkipAsync']/*/*[@type='GAsyncReadyCallback']" name="scope">async</attr>
+  <attr path="/api/namespace/object[@cname='GInputStream']/method[@cname='g_input_stream_read']/parameters/parameter[@name='buffer']" name="type">guchar*</attr>
+  <attr path="/api/namespace/object[@cname='GInputStream']/method[@cname='g_input_stream_read']/parameters/parameter[@name='buffer']" name="array">1</attr>
   <attr path="/api/namespace/object[@cname='GOutputStream']/method[@name='CloseAsync']/*/*[@type='GAsyncReadyCallback']" name="scope">async</attr>
   <attr path="/api/namespace/object[@cname='GOutputStream']/method[@name='FlushAsync']/*/*[@type='GAsyncReadyCallback']" name="scope">async</attr>
   <attr path="/api/namespace/object[@cname='GOutputStream']/method[@name='SpliceAsync']/*/*[@type='GAsyncReadyCallback']" name="scope">async</attr>
