@@ -1,5 +1,10 @@
 2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>
 
+	* gio/metadata: fix the InputStream.Read api
+	* gio/StreamWriter.cs: fix the Read ()
+
+2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>
+
 	* gio/metadata:
 	* gio/Makefile.am:
 	* gio/SeekType.cs: fix GSeekType so Seekable.Seek () is generated
